[package]
name = "ocbot"
version = "0.1.0"
authors = ["Lukas Werling <lukas.werling@gmail.com>"]

[dependencies]
eventsource = "0.2.0"
reqwest = "0.4.0"
serde = "0.9.4"
serde_derive = "0.9"
serde_json = "0.9.5"
irc = { version = "0.11.6", default-features = false, features = ["encode"] }
chrono = { version = "0.3.0", features = ["serde"] }
